// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Store Package Returns element instance by element id 1`] = `
DFlexNode {
  "animatedFrame": null,
  "depth": 0,
  "id": "id-0",
  "isInitialized": false,
  "isPaused": true,
  "isVisible": false,
  "keys": Object {
    "CHK": null,
    "PK": "1-0",
    "SK": "0-0",
  },
  "order": Object {
    "parent": 0,
    "self": 0,
  },
  "readonly": false,
  "ref": null,
}
`;

exports[`Testing Store Package Snaps shot registry 1`] = `
Object {
  "id-0": DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-0",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "readonly": false,
    "ref": null,
  },
  "id-1": DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-1",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 1,
    },
    "readonly": false,
    "ref": null,
  },
  "id-2": DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-2",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 2,
    },
    "readonly": false,
    "ref": null,
  },
  "p-id-0": DFlexNode {
    "animatedFrame": null,
    "depth": 1,
    "id": "p-id-0",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": "2-0",
      "PK": "2-0",
      "SK": "1-1",
    },
    "order": Object {
      "parent": 1,
      "self": 0,
    },
    "readonly": false,
    "ref": null,
  },
}
`;

exports[`Testing Store Package Snaps shot registry after delete 1`] = `
Object {
  "id-0": DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-0",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "readonly": false,
    "ref": null,
  },
  "id-1": DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-1",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 1,
    },
    "readonly": false,
    "ref": null,
  },
  "id-2": DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-2",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 2,
    },
    "readonly": false,
    "ref": null,
  },
  "p-id-0": DFlexNode {
    "animatedFrame": null,
    "depth": 1,
    "id": "p-id-0",
    "isInitialized": false,
    "isPaused": true,
    "isVisible": false,
    "keys": Object {
      "CHK": "2-0",
      "PK": "2-0",
      "SK": "1-1",
    },
    "order": Object {
      "parent": 1,
      "self": 0,
    },
    "readonly": false,
    "ref": null,
  },
}
`;
